<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image"
        tools:context=".ui.submission.SubmissionFragment">

        <include
            android:id="@+id/layout_toolbar_submission"
            layout="@layout/toolbar_submission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/layout_submission_title_label"
            layout="@layout/layout_submission_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar_submission" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_submission_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_submission_title_label">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/text_input_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_input"
                android:hint="@string/hint_first_name"
                app:layout_constraintEnd_toStartOf="@+id/text_input_last_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="8dp"
                android:inputType="text"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/text_input_last_name"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:background="@drawable/background_input"
                android:hint="@string/hint_last_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_input_first_name"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="text"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/text_input_email_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_input"
                android:hint="@string/hint_email_address"
                android:inputType="text"
                android:textStyle="bold"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_first_name" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/text_input_project_on_github"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_input"
                android:hint="@string/hint_project_on_github"
                android:inputType="text"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/text_input_email_address" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_submit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/title_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_project_on_github"
                android:textAllCaps="false"
                app:backgroundTint="@color/google_yellow"
             />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>